<resources>
    <string name="app_name">SpotifyClone</string>
    <string name="spotify">Spotify</string>

    <!-- Login Activity-->
    <string name="login_spotify_brand">
        Millions of Songs.\n
        Free on Spotify
    </string>
    <string name="login_button_sign_up">SIGN UP FREE</string>
    <string name="login_button_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="login_button_login">LOG IN</string>

    <!-- Login Credentials Activity-->
    <string name="credentials_toolbar_title" />
    <string name="credentials_label_email">Email or Username</string>
    <string name="credentials_label_password">Password</string>
    <string name="credentials_button_login">LOG IN</string>
    <string name="credentials_button_forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="credentials_input_hint_email">Your E-mail</string>
    <string name="credentials_input_hint_password">Your Password</string>

    <!-- Home Fragment -->
    <string name="fragment_home_toolbar_title" />
    <string name="fragment_home_label_recommendedPlaylists">Good Morning</string>

    <!-- Search Fragment -->
    <string name="fragment_search_title">Search</string>

    <!-- Library Fragment -->
    <string name="fragment_library_musics_guide">Musics</string>
    <string name="fragment_library_podcasts_guide">Podcasts</string>

    <!-- Local Songs Fragment -->
    <string name="fragment_local_songs_title">Local Songs</string>
    <string name="fragment_local_songs_button_random_play">SHUFFLE PLAY</string>
    <string name="fragment_local_songs_text_downloaded_songs">Downloaded Songs</string>
    <string name="fragment_local_songs_text_empty_list">There Is Nothing Here</string>
    <string name="fragment_local_songs_text_empty_list_description">Verify if you gave the permition of access the local storage on device settings</string>

    <!-- Music Player Activity -->
    <string name="activity_music_player_progress_init_time">0:00</string>

    <!-- Music Queue Activity -->
    <string name="music_queue_next_from">Next From:</string>
    <string name="music_queue_now_playing">Now Playing</string>
    <string name="music_queue_next_in_queue">Next In Queue</string>
    <string name="music_queue_fragment_add_music">ADD TO QUEUE</string>
    <string name="music_queue_fragment_remove_music">REMOVE</string>

    <!-- Queue Music Player -->
    <string name="music_queue_player_devices_available">Devices Available</string>

    <!-- Include Toolbar -->
    <string name="toolbar_subTitle_library">PLAYING FROM YOUR LIBRARY</string>
    <string name="toolbar_subTitle_playlist">PLAYING FROM YOUR PLAYLIST</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_label_1">Home</string>
    <string name="bottom_menu_label_2">Search</string>
    <string name="bottom_menu_label_3">Your Library</string>

    <!-- Dialog Alert Permissions -->
    <string name="dialog_alert_permissions_title">We Need Your Permission</string>
    <string name="dialog_alert_permissions_description">This is necessary so that you can listen to your songs stored on the device</string>
    <string name="dialog_alert_btn_permissions_allow_storage_access">Accept</string>
    <string name="dialog_alert_btn_permissions_cancel">Cancel</string>

    <!-- Image Descriptions -->
    <string name="img_description_album_image">Music Album Image</string>
    <string name="img_description_brand">Spotify Logo</string>
    <string name="img_description_music_playing">Music Playing</string>
    <string name="img_description_toolbar_btn1">Screen Close Button</string>
    <string name="img_description_toolbar_btn2">Additional or Optional Button for some screens</string>
    <string name="img_description_toolbar_btn3">Screen Options Button</string>
    <string name="img_description_download">Download Button</string>
    <string name="img_description_playlist_button">Playlist Button</string>
    <string name="img_description_favorite_music">Favorite Music</string>
    <string name="img_description_play_music">Play Button</string>
    <string name="img_description_devices">Devices</string>
    <string name="img_description_next_music">Next Music</string>
    <string name="img_description_previous_music">Previous Music</string>
    <string name="img_description_music_queue">Music Queue</string>
    <string name="img_description_like_music">Like Music</string>

</resources>
